# ghax

./: .gitignore  .task-memory.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODOS.md  dist-workspace.toml  llms.txt  package-lock.json  package.json  plan.md  tsconfig.json
.cargo/: config.toml
.claude/skills/: ghax-browse.md  ghax.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  attach.rs  canary.rs  dispatch.rs  help.rs  main.rs  output.rs  qa.rs  qa_common.rs  review.rs  rpc.rs  shell.rs  ship.rs  small.rs  sse.rs  state.rs  time_util.rs
design/plan/: 02-architecture.md  04-roadmap.md  05-session-handoff.md
docs/: .keep  BENCHMARK.md
docs/design/plan/: 01-vision.md  03-commands.md  04-roadmap.md  05-session-handoff.md  06-rust-cli-rewrite.md
docs/planning/: archive.md  sprint-bucket-a.md  tasks.md
docs/sessions/: 2026-04-20-jnremache-field-report.md  2026-04-20-simplify-pass.md
scripts/: bootstrap-daemon-runtime.sh  check.sh  install-link.sh  install-release.sh  release.sh
src/: browser-launch.ts  buffers.ts  cdp-client.ts  cli.ts  config.ts  daemon.ts  snapshot.ts  source-maps.ts
test/: benchmark.ts  capture-bodies-smoke.ts  cross-browser.ts  hot-reload-smoke.ts  perf-bench.ts  smoke.ts
test/fixtures/test-extension/: README.md  background.js  content.css  content.js  manifest.json
